fixed alignment in our recent launches

--- a/public/styles/css/game-development-service.css
+++ b/public/styles/css/game-development-service.css
@@ -1456,7 +1456,15 @@ p {
         width: 820px !important;
     }
 }
-
+@media screen and (min-width:1024px) and (max-width:1100px) {
+    .expert-text {
+        font-size: 30px;
+        text-transform: uppercase;
+    }
+    .text-large {
+        font-size: 70px;
+    }
+}
 .game-development-outer {
     display: flex;
     flex-direction: column;
@@ -1687,7 +1695,6 @@ p {
     padding: 50px;
     display: flex;
     gap: 50px;
-    align-items: center;
     z-index: 1;
 }
 
